# tempest

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docs.yml  lint.yml  pypi-deploy.yml  release_to_pypi.yml  setup_and_run_tests.yml  test-wheel.yml  tests.yml
.opencode/: Phase-7-Completion-Summary.md  StateManager-Migration-Guide.md
.opencode/plans/: Sampler-Refactoring-Plan.md
docs/: citation.md  how_it_works.md  index.md  installation.md  quickstart.md  requirements.txt
docs/api/: cluster.md  parallel.md  particles.md  sampler.md  tools.md
docs/examples/: blobs.md  gaussian_mixture.md  model_comparison.md  oscillatory_fitting.md  rosenbrock.md
docs/examples/scripts/: generate_corner_plots.py  generate_gaussian_mixture_plot.py  generate_rosenbrock_plot.py  (+6 more)
docs/user_guide/: advanced.md  basic_usage.md  parallelization.md  parameter_selection.md  parameter_selection_advanced.md  priors.md
tempest/: __init__.py  _core.py  cluster.py  config.py  core.py  mcmc.py  modes.py  parallel.py  particles.py  sampler.py  state_manager.py  student.py  tools.py
tempest/_steps/: __init__.py  resample.py  reweight.py
tempest/steps/: mutate.py  resample.py  reweight.py
tests/: test_config.py  test_edge_cases.py  test_end_to_end.py  test_package_install.py  test_posterior_evidence.py  test_sample_method.py  test_sampler.py  test_sampler_features.py  test_state.py  test_state_manager.py  test_steps.py  test_tools.py  test_volume_variation.py
