[metadata]
name = tempest
version = attr: tempest._version.version
author = Minas Karamanis
author_email = minaskar@gmail.com
url = https://github.com/minaskar/tempest
description = Persistent Sampling
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_file = LICENCE
platform = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
packages =
    tempest
test_suite = tests
setup_requires =
    setuptools >=46.4.0
install_requires =
    numpy>=1.20.0
    tqdm>=4.60.0
    scipy>=1.4.0
    dill>=0.3.8
    multiprocess>=0.70.15